[package]
name = "pwd-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-http = "3.3.1"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
anyhow = "1.0.70"
base64 = "0.21.0"
clap = { version = "4.1.11", features = ["derive", "env"] }
flate2 = "1.0.25"
futures = "0.3.27"
gitignore = "1.0.7"
once_cell = "1.17.1"
rand = "0.8.5"
reqwest = { version = "0.11.16", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
sha2 = "0.10.6"
tar = "0.4.38"
tempfile = "3.5.0"
tokio = { version = "1.26.0", features = ["full"] }
